<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.francelabs.datafari</groupId>
  <artifactId>datafari-ce</artifactId>
  <!-- Main POM of datafari -->
  <packaging>pom</packaging>
  <version>6.0-Community</version>
  <name>Datafari Enterprise Search CE - Parent POM</name>
  <properties>
    <adminui.version>1.0</adminui.version>
    <adminui.md5>ae9ca787e5067f3bedb1f2cdad4408b0</adminui.md5>
    <bcpkix-jdk15on.version>1.70</bcpkix-jdk15on.version>
    <bcprov-jdk15on.version>1.70</bcprov-jdk15on.version>
    <cassandra.version>4.1.3</cassandra.version>
    <cassandra.sha512>393443a5b9849645362df2f7536e734e1fc6d513aadf440fab8dda3063553394a138805098796d35f9d4d31e2899ecab630a2ec2a44d00d5e63bed549a2e844c</cassandra.sha512>
    <cassandra.driver.version>4.17.0</cassandra.driver.version>
    <datafari.version>6.0-Community</datafari.version>
    <datafariui.version>1.4.2</datafariui.version>
    <datafariui.md5>07ea154d167d13afa8107d4cae9a1fa0</datafariui.md5>
    <guava.version>26.0-jre</guava.version>
    <httpclient.version>4.5.13</httpclient.version>
    <java.version>1.11</java.version>
    <jena-libs.version>4.4.0</jena-libs.version>
    <json.simple.version>1.1.1</json.simple.version>
    <jackson.version>2.13.3</jackson.version>
    <jackson-databind.version>2.13.4.1</jackson-databind.version>
    <keycloak.version>22.0.1</keycloak.version>
    <log4j.version>2.17.1</log4j.version>
    <logstash.version>8.12.1</logstash.version>
    <logstash.sha512>df516962f9518a20809a92655605766607f2177287f7e296e2de40e4970680d3004e7e5cbad57b15add1271f5c7a0c166a950b0fd995eaf57417d8efb16f6ed8</logstash.sha512>
    <mcf-solr-plugin.version>9.x-plugin-2.2</mcf-solr-plugin.version>
    <mcf-solr-plugin.sha512>38261a93265c1697db2742947ec72dfdfbb31f4dcab7a343484b06bb57416a668c750a98d5130fadf97464587a09677bb927e2623b862e618e45a3922b67d20b</mcf-solr-plugin.sha512>
    <mssql-jdbc.version>10.2.1.jre11</mssql-jdbc.version>
    <netty.version>4.1.63.Final</netty.version>
    <ojdbc.version>19.15.0.0.1</ojdbc.version>
    <postgres.version>42.1.3</postgres.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <solr.sha512>7e16aa71fc01f9d9b05e5514e35798104a18253a211426aa669aa3b91225d110a4fa1c78c9ec86b7e1909e2aae63696deffd877536790303cd0638eb7f1a8c63</solr.sha512>
    <solr.version>9.6.1</solr.version>
     <spring.boot.version>2.7.14</spring.boot.version>
    <spring.data.cassandra.version>3.4.15</spring.data.cassandra.version>
    <spring.security.version>5.8.5</spring.security.version>
    <spring.security.kerberos.version>1.0.1.RELEASE</spring.security.kerberos.version>
    <spring.security.saml2.core.version>1.0.10.RELEASE</spring.security.saml2.core.version>
    <spring.version>5.3.29</spring.version>
    <spring.oauth2.version>2.5.2.RELEASE</spring.oauth2.version>
    <tika.version>2.9.2</tika.version>
    <tika-server.sha512>540b6a1ba20f2ce951a1928a609a00d4552dcc075bc204c3a4ba3697b4a86c8853d450d913a6bb165693dafc3c581a170769ff6a816cbc6a59ac3360904d40f9</tika-server.sha512>
    <tika-server-commit-number>5c0793e2c</tika-server-commit-number>
    <tomcat.version>9.0.81</tomcat.version>
    <slf4j.version>1.7.36</slf4j.version>
    <xmlsec.version>2.3.0</xmlsec.version>
<mcf.version>2.26-a2343428</mcf.version>
<mcf.sha512>b53d7fd2a6e43968479ce7cf9dec007a344404234b10b1b30e2876e216c96b91640fd71e840128ade2fccc48d9144e72d42602c5139d5db92967dd01f1bf32b7</mcf.sha512>
<zookeeper.version>3.9.1</zookeeper.version>
 <zookeeper.sha512>6a1c56557ee8de63dc0730de6c55640afa8ae9043e57539fed393120fe3adfb7f30a6ac13af0a6331ff34ba9c6f2b31e41e40c5446e669651522fffb9ce64e48</zookeeper.sha512>
  </properties>
  
  <!-- The order of modules execution is important  -->
  <modules>
    <!-- Child module datafari-core added to install project dependencies in Maven 
      repo -->

    <module>datafari-solr</module>
    <module>datafari-mcf</module>
    <module>datafari-mcf-connectors-dependencies</module>
    <module>datafari-core</module>
    <module>datafari-webapp</module>
    <module>datafari-zookeeper</module>
    <module>datafari-jena</module>
    <module>datafari-cassandra</module>
    <module>datafari-tomcat</module>
    <module>datafari-analytic-stack</module>
    <module>datafari-updateprocessor</module>
    <module>datafari-docfilter-connector</module>
    <module>datafari-emptier-connector</module>
    <module>datafari-metadatacleaner-connector</module>
    <module>datafari-spacy-fastapi-connector</module>
    <module>datafari-tika-server</module>
    <module>datafari-handler</module>
    <module>datafari-mcf-scripts</module>
    <module>datafari-web-connector</module>
    <module>datafari-share-connector</module>
    <module>datafari-ui</module>
    <module>datafari-adminui</module>
    <module>datafari-git-plugin</module>
    <module>datafari-regex-entity-connector</module>
    <module>datafari-active-directory-connector</module>
    <module>datafari-solr-atomic-update</module>
    <module>datafari-confluence-v6-connector</module>
    <module>datafari-solr-connector</module>
  </modules>
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-enforcer-plugin</artifactId>
          <version>3.0.0-M2</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.1</version>
          <configuration>
            <release>11</release>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-dependency-plugin</artifactId>
          <version>3.1.1</version>
        </plugin>
        <plugin>
          <groupId>com.googlecode.maven-download-plugin</groupId>
          <artifactId>download-maven-plugin</artifactId>
          <version>1.4.2</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.0.0-M3</version>
          <configuration>
            <argLine> --illegal-access=permit 
            </argLine>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-install-plugin</artifactId>
          <version>3.0.0-M1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.1.2</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-shade-plugin</artifactId>
          <version>3.2.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-war-plugin</artifactId>
          <version>3.2.3</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-assembly-plugin</artifactId>
          <version>3.1.1</version>
        </plugin>
        <plugin>
          <groupId>pl.project13.maven</groupId>
          <artifactId>git-commit-id-plugin</artifactId>
          <version>3.0.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-antrun-plugin</artifactId>
          <version>1.8</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>3.0.0-M1</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <executions>
          <execution>
            <id>enforce-maven</id>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <requireMavenVersion>
                  <version>3.0.5</version>
                </requireMavenVersion>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  <description>
Datafari is the ideal product for those who want to search through their data, while using advanced open source technologies. Datafari combines Apache ManifoldCF and Apache Solr, to allow its users to search through many different and diverse data sources: their file shares, their cloud shares (dropbox, google drive???), their databases, but also their emails and many more.
    </description>
  <url>http://www.datafari.com/en/</url>
  <inceptionYear>2011</inceptionYear>
  <licenses>
    <license>
      <name>Apache License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
  <organization>
    <name>France Labs - Search Experts</name>
    <url>http://www.francelabs.com/en/</url>
  </organization>
  <issueManagement>
    <system>JIRA</system>
    <url>https://datafari.atlassian.net/secure/Dashboard.jspa</url>
  </issueManagement>
  <scm>
    <connection>scm:git:https://github.com/francelabs/datafari.git</connection>
    <tag>HEAD</tag>
    <url>https://github.com/francelabs/datafari</url>
  </scm>
</project>
